# FerrumDex

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: bingxparser.rs  bybitparser.rs  lib.rs  main.rs  okxparser.rs  parser.rs
